Code From torcs-rl-agent

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-# Środowisko wirtualne Pythona
-venv/
-
-# Pliki tymczasowe Pythona
-__pycache__/
-*.pyc
-
-# Folder z kodem C++, który jest pobierany, a nie tworzony przez nas
-gym-torcs/
-python_code/
+__pycache__
+save
+logs
+torcs
+.idea
+.mypy_cache
+.DS_Store
+.vscode
